# Django-Ninja-Demo

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/: api.py  settings.py  urls.py
company/: admin.py  inlines.py  models.py
company/api/: __init__.py  comment.py  label.py  project.py  projectcategory.py  task.py  worker.py
company/fixtures/: comment.json  label.json  project.json  projectcategory.json  task.json  worker.json
company/management/commands/: populate_database.py
company/migrations/: 0001_initial.py
company/schemas/: __init__.py  comment.py  label.py  project.py  projectcategory.py  task.py  worker.py
core/: api.py  auth.py  schema.py
devices/: admin.py  api.py  models.py  schemas.py
devices/migrations/: 0001_initial.py
nginx/: nginx.conf
